--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,12 @@ edition = "2024"
 [dependencies]
 colored = "3.0.0"
 docopt = "1.1.1"
-llvm-sys = "191"
+llvm-sys = { version = "191", optional = true }
+llvmenv = "0.3.2"
 nom = "8.0.0"
 regex = "1.11.1"
 rustc-serialize = "0.3.25"
+
+[features]
+default = []
+without-llvm = []
