--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "aiohttp>=3.12.13",
+    "asyncio>=3.4.3",
     "pre-commit>=4.2.0",
+    "rich>=14.0.0",
 ]
