--- a/.gitignore
+++ b/.gitignore
@@ -276,3 +276,24 @@ http-client.private.env.json
 
 /target
 Cargo.lock
+
+
+# Added by cargo
+#
+# already existing elements were commented out
+
+#/target
+
+
+# Added by cargo
+#
+# already existing elements were commented out
+
+#/target
+
+
+# Added by cargo
+#
+# already existing elements were commented out
+
+#/target
