--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,14 +4,5 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-colored = "3.0.0"
-docopt = "1.1.1"
-llvm-sys = { version = "201", optional = true }
-llvmenv = "0.3.2"
+clap = "4.5.40"
 nom = "8.0.0"
-regex = "1.11.1"
-rustc-serialize = "0.3.25"
-
-[features]
-default = []
-without-llvm = []
